Homebox layout no longer blue+green

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -119,6 +119,7 @@
 		&.os2-box-homebox {
 
 			&.os2-box-homebox-fællesnyt,
+			&.os2-box-homebox-kommende-aktiviteter,
 			&.os2-box-homebox-kommmende-aktiviteter,
 			&.os2-box-homebox-markedspladsen {
 				.os2-box-watermarked;
@@ -129,6 +130,7 @@
 			.os2-box-quinary;
 		}
 
+		&.os2-box-homebox-kommende-aktiviteter,
 		&.os2-box-homebox-kommmende-aktiviteter {
 			.os2-box-tertiary;
 		}
