Remove images from feed

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
@@ -66,6 +66,18 @@
 			}
 		}
 	}
+
+	.os2-node-teaser {
+
+		.os2-node-teaser-body {
+
+			.field-name-body {
+				img {
+					display: none;
+				}
+			}
+		}
+	}
 }
 
 // --------------------------------------------------
