Ability to upload os2intra BI plugin logo

--- a/public_html/profiles/os2intra/modules/os2intra/custom/os2intra_bi/css/view.css
+++ b/public_html/profiles/os2intra/modules/os2intra/custom/os2intra_bi/css/view.css
@@ -2,3 +2,20 @@
   float: right;
   text-align: right;
 }
+
+.os2intra-bi-plugin-logo {
+  display: inline-block;
+  width: 100%;
+}
+
+.os2intra-bi-plugin-logo img {
+  float: right;
+}
+
+.page-os2intra-bi .os2-box .os2-box-body {
+  padding: 0;
+}
+
+.entity-os2intra-bi-inner {
+  padding: 5px 15px;
+}
