--- a/public_html/profiles/os2intra/modules/os2intra/custom/os2intra_bi/css/view.css
+++ b/public_html/profiles/os2intra/modules/os2intra/custom/os2intra_bi/css/view.css
@@ -1,6 +1,7 @@
 .entity-os2intra-bi .bi-import-file-modified {
   float: right;
   text-align: right;
+  margin-bottom: 10px;
 }
 
 .os2intra-bi-plugin-logo {
@@ -22,4 +23,28 @@
 
 .field-name-os2intra-bi-import-file td {
   text-align: right;
+}
+
+.entity-os2intra-bi img.img-responsive {
+  margin: 30px auto;
+  max-width: 450px;
+}
+
+.entity-os2intra-bi {
+  background: url('../img/lion.png');
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: contain;
+}
+
+.entity-os2intra-bi .table-striped > tbody > tr:nth-of-type(even) {
+  background: transparent !important;
+}
+
+.entity-os2intra-bi-inner .content {
+  padding: 0;
+}
+
+.field-name-os2intra-bi-import-file .field-label {
+  display: none;
 }
