implemented Import from pdf files

--- a/public_html/profiles/os2intra/modules/os2intra/custom/os2intra_bi/css/view.css
+++ b/public_html/profiles/os2intra/modules/os2intra/custom/os2intra_bi/css/view.css
@@ -41,3 +41,12 @@
 .text-bold {
   font-weight: 700;
 }
+
+.bi-import-html-file #page-container {
+  position: relative;
+  background: none;
+}
+
+.bi-import-html-file #sidebar {
+  display: none;
+}
