FKDK-887 Events block

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -141,6 +141,12 @@
 	}
 }
 
+.os2-box-page-kommmende-aktiviteter {
+  .os2-box {
+    .os2-box-tertiary;
+  }
+}
+
 // --------------------------------------------------
 // Responsive
 // --------------------------------------------------
