--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
@@ -90,13 +90,7 @@
 }
 
 .os2-box-watermarked {
-
-	&,
-	>	.os2-box {
-		background-image: url('../img/logo_watermark.png');
-		background-repeat: no-repeat;
-		background-position: bottom right @default-left-right-spacing;
-	}
+  // Watermarks was removed in the new design-manual in 2018.
 }
 
 // --------------------------------------------------
