--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-designer.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-designer.less
@@ -11,10 +11,10 @@
 // --------------------------------------------------
 
 // Brand
-@brand-secondary:	 #4ec6f8;
-@brand-tertiary:   #67c10e;
-@brand-quaternary: #ff911c;
-@brand-quinary: 	 #ea6060;
+@brand-secondary:	 #00a5e2;
+@brand-tertiary:   #70ba6e;
+@brand-quaternary: #e72e89;
+@brand-quinary: 	 #e7314b;
 
 // Social
 @social-link-color-facebook:    #3b5998;
