--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bootstrap.less
@@ -14,7 +14,7 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #00406f;
+@brand-primary:         #00335b;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
@@ -28,7 +28,7 @@
 //** Background color for `<body>`.
 @body-bg:               #eeeff4;
 //** Global text color on `<body>`.
-@text-color:            #43698f;
+@text-color:            #2a4f75;
 
 //** Global textual link color.
 @link-color:            @brand-primary;
@@ -65,7 +65,7 @@
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
 //** By default, this inherits from the `<body>`.
-@headings-font-family:    Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+@headings-font-family:    @font-family-sans-serif;
 @headings-font-weight:    700;
 @headings-line-height:    1.1;
 @headings-color:          @brand-primary;
