--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/main-navigation.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/main-navigation.less
@@ -20,6 +20,13 @@
     .search-form {
         margin-left: @default-left-right-spacing;
 
+        .input-group {
+
+            .form-control {
+                width: 100% !important;
+            }
+        }
+
         .btn {
 
             .icon {
