--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
@@ -39,7 +39,7 @@ video {
 			.btn-xs;
       margin-right: 5px;
     }
-    
+
   }
   span.interests {
     .btn-group;
@@ -49,5 +49,12 @@ video {
 			.btn-xs;
       margin-right: 5px;
       }
+  }
+}
+
+.field-name-field-os2web-webform-ref {
+
+  .links {
+    display: none;
   }
 }
