--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/misc.less
@@ -58,3 +58,14 @@ video {
     display: none;
   }
 }
+
+// Tabs in Safari.
+.horizontal-tabs .horizontal-tab-hidden {
+  // Resets.
+  //display: block;
+  position: static !important;
+  top: initial !important;
+  
+  // New.
+  display: none !important;
+}
