--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/file.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/file.less
@@ -28,7 +28,9 @@
 
 // File
 .file {
-
+  .content {
+    padding: 0;
+  }
 	a {
 		color: @os2-file-link-font-color;
 		text-decoration: @os2-file-link-text-decoration;
