--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/popover-button.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/popover-button.less
@@ -31,6 +31,20 @@
 // Mobile
 @media @media-query-mobile {
 
+  .my-profile-btn-wrapper {
+    display: block;
+    margin-bottom: 20px;
+
+    .my-profile-btn {
+      display: block;
+      width: 100%;
+      text-align: center;
+      color: white;
+      background-color: @brand-primary;
+      padding: 10px 0;
+    }
+  }
+
 	// Popover button
 	.popover-button {
 		display: block;
@@ -74,6 +88,25 @@
 
 // Tablet
 @media @media-query-tablet {
+
+    .my-profile-btn-wrapper {
+      position: absolute;
+      right: -41px;
+      top: 300px;
+
+      .my-profile-btn {
+        display: block;
+        transform: rotate(90deg);
+        color: white;
+        background-color: #00335b;
+        border-radius: 4px;
+        text-transform: uppercase;
+        font-weight: bold;
+        padding: 5px 15px;
+        text-decoration: none;
+        cursor: pointer;
+      }
+    }
 
 	// Popover button
 	.popover-button {
