Added: Small topbanner in template

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
@@ -14,6 +14,22 @@
 // Styling
 // --------------------------------------------------
 
+
+// Banner
+
+.banner-outer {
+  width: 100%;
+  height: 100%;
+
+  .banner-inner {
+    height: 100%;
+    width: 100%;
+    background-image: url('https://picsum.photos/1080/180)');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
 // Front
 .front {
 
