--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
@@ -19,12 +19,12 @@
 
 .banner-outer {
   width: 100%;
-  height: 100%;
+  height: 180px;
 
   .banner-inner {
     height: 100%;
     width: 100%;
-    background-image: url('https://picsum.photos/1080/180)');
+    background-image: url('https://picsum.photos/1920/180');
     background-repeat: no-repeat;
     background-size: cover;
   }
