Revert top banner changes

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
@@ -24,6 +24,7 @@
   .banner-inner {
     height: 100%;
     width: 100%;
+    background-image: url('https://picsum.photos/1920/300');
     background-repeat: no-repeat;
     background-size: cover;
   }
