--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
@@ -33,6 +33,23 @@
 // --------------------------------------------------
 
 // Box
+
+#homebox-block-views_os2intra_forside_views-block_2-1 {
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
+  position: relative;
+
+  &:after {
+    content: '';
+    width: 100%;
+    display: block;
+    background-color: #ebebeb;
+    height: 2px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: -10px;
+  }
+}
+
 .os2-box {
 	background-color: @os2-box-background-color;
 	border-radius: @os2-box-border-radius;
