--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/buttons.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/buttons.less
@@ -14,6 +14,21 @@
 // Styling
 // --------------------------------------------------
 
+.view-os2intra-brugervisning {
+  .view-footer {
+    display: flex;
+    justify-content: flex-end;
+
+    a {
+      color: white;
+      background-color: #00335b;
+      padding: 8px 9px;
+      border-radius: 5px;
+
+    }
+  }
+}
+
 // Button
 .btn {
 
