User group menu styles

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/popover-button.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/popover-button.less
@@ -20,6 +20,36 @@
 // Styling
 // --------------------------------------------------
 
+.usergroup-dropdown {
+  position: absolute;
+  right: 100px;
+  top: -50px;
+  background-color: #00335b;
+  border-radius: 5px;
+
+  .menu-nav {
+    .main-navigation-list {
+      padding: 20px;
+
+      .main-navigation-list-dropdown {
+        list-style: none;
+        .main-navigation-list-dropdown-menu {
+          .main-navigation-list-link {
+            list-style: none;
+            color: white;
+
+            a:hover {
+              text-decoration: underline;
+              color: white;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
