--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/popover-button.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/popover-button.less
@@ -27,7 +27,7 @@
   background-color: #00335b;
   border-radius: 5px;
 
-  .menu-nav {
+  .menu {
     .main-navigation-list {
       padding: 20px;
 
