Correct hover styles

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/popover-button.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/popover-button.less
@@ -33,14 +33,21 @@
 
       .main-navigation-list-dropdown {
         list-style: none;
+        a{
+          color: white !important;
+        }
         .main-navigation-list-dropdown-menu {
           .main-navigation-list-link {
             list-style: none;
             color: white;
 
+            a {
+              color: white !important;
+            }
+
             a:hover {
               text-decoration: underline;
-              color: white;
+              color: white !important;
             }
           }
         }
