--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -15,6 +15,31 @@
 // --------------------------------------------------
 
 // Homebox
+
+#homebox-block-views_os2intra_forside_views-block_2-1 {
+  .os2-box-body {
+    .portlet-content {
+      .view-os2intra-forside-views {
+        .view-content {
+          .views-row {
+            .views-field-field-os2intra-images {
+              float: left;
+              max-width: 110px;
+              padding-right: 10px;
+              margin-bottom: 20px;
+            }
+            .views-field-title {
+              font-size: 18px;
+              font-weight: 700;
+              margin-bottom: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 #homebox {
 
 	#homebox-add {
