--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -27,6 +27,13 @@
               max-width: 110px;
               padding-right: 10px;
               margin-bottom: 20px;
+
+              @media screen and (max-width: 992px) {
+                max-width: 100%;
+                display: flex;
+                justify-content: center;
+                padding-right: 0;
+              }
             }
             .views-field-title {
               font-size: 18px;
@@ -178,30 +185,6 @@
 
 // Mobile
 @media @media-query-mobile {
-
-  #homebox-block-views_os2intra_forside_views-block_2-1 {
-    .os2-box-body {
-      .portlet-content {
-        .view-os2intra-forside-views {
-          .view-content {
-            .views-row {
-              .views-field-field-os2intra-images {
-                max-width: 100%;
-                margin-bottom: 20px;
-                display: flex;
-                justify-content: center;
-              }
-              .views-field-title {
-                font-size: 18px;
-                font-weight: 700;
-                margin-bottom: 10px;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
 
 	// Homebox
 	.os2-box-homebox {}
