BE-318 added icon on more-link

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -20,6 +20,18 @@
   .os2-box-body {
     .portlet-content {
       .view-os2intra-forside-views {
+        .more-link {
+          a {
+            font-size: 11px;
+            &:hover:before {
+              color: #00a5e2;
+            }
+            &:before {
+              content: '\f0fe';
+              font-family: "FontAwesome";
+            }
+          }
+        }
         .view-content {
           .views-row {
             .views-field-field-os2intra-images {
