BE-318 responsive mobile styling

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -34,6 +34,11 @@
         }
         .view-content {
           .views-row {
+
+            @media screen and (max-width: 992px) {
+              display: flex;
+              flex-direction: column;
+            }
             .views-field-field-os2intra-images {
               float: left;
               max-width: 110px;
