Faellesnyt styling, only banner on frontpage

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -41,9 +41,11 @@
             }
             .views-field-field-os2intra-images {
               float: left;
-              max-width: 110px;
+              max-width: 100%;
               padding-right: 10px;
               margin-bottom: 20px;
+              display: inline-block;
+              width: 50%;
 
               @media screen and (max-width: 992px) {
                 max-width: 100%;
