Add to basket icon -> heart icon

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -78,7 +78,7 @@
 		a {
 
 			&:before {
-				content: @fa-var-shopping-basket;
+				content: '\f004';
 			}
 		}
 	}
@@ -152,7 +152,7 @@
 			}
 		}
 	}
-	
+
 	.subscribeflag  {
 
 		.flag {
