FR-6 Changes on Favorites page

--- a/public_html/profiles/os2intra/modules/custom/node_basket/css/node_basket.css
+++ b/public_html/profiles/os2intra/modules/custom/node_basket/css/node_basket.css
@@ -51,3 +51,6 @@
 .node-basket .node-basket-basket {}
 .node-basket .node-basket-toolboxes {}
 .node-basket .node-basket-other-toolboxes {}
+.node-node-basket .remove_from_basket {
+  text-align: right;
+}
