--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/buttons.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/buttons.less
@@ -44,6 +44,22 @@
   }
 }
 
+.os2-node-includeable-heading {
+  .remove_from_basket {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
+    a {
+      color: white;
+      background-color: #00335b;
+      padding: 5px 10px;
+      border-radius: 5px;
+    }
+  }
+}
+
 // --------------------------------------------------
 // Responsive
 // --------------------------------------------------
