Faellesnyt red link btn

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -204,6 +204,16 @@
 	&:extend(.clearfix all);
 }
 
+.faellesnyt-btn {
+  color: white;
+  background-color: #e7314b;
+  transition: 0.3s ease;
+
+  &:hover {
+    background-color: #801c2a;
+  }
+}
+
 // --------------------------------------------------
 // Responsive
 // --------------------------------------------------
