--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -16,7 +16,7 @@
 
 // Homebox
 
-.os2-box-homebox-seneste-nyt {
+#homebox-block-views_os2intra_forside_views-block_2-1 {
   .os2-box-body {
     .portlet-content {
       .view-os2intra-forside-views {
