add class for view

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
@@ -34,7 +34,7 @@
 
 // Box
 
-#homebox-block-views_os2intra_forside_views-block_2-1 {
+#homebox-block-views_os2intra_forside_views-block_2-1, #homebox-block-views_os2intra_forside_views-block_2 {
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
   position: relative;
 
